--- a/dzmini/pages/questionnaire_detail/questionnaire_detail.wxss
+++ b/dzmini/pages/questionnaire_detail/questionnaire_detail.wxss
@@ -479,7 +479,7 @@ margin:10rpx auto 0;
   height: 60rpx;
   min-width: 150rpx;
   border-radius: 8rpx;
-  border: 1rpx solid #e1e1e1;
+  border: 2rpx solid #dddddd;
   color: #c1c1c1;
   font-size: 26rpx;
 }
